seedboxk8s/applications/lazylibrarian/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lazylibrarian
  template:
    metadata:
      labels:
        app: lazylibrarian
    spec:
      containers:
        - image: ghcr.io/linuxserver/lazylibrarian
          name: lazylibrarian
          ports:
            - containerPort: 5299
          volumeMounts:
            - mountPath: /config
              name: lazylibrarian-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: lazylibrarian-config-pvc
          persistentVolumeClaim:
            claimName: lazylibrarian-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
