seedboxk8s/applications/lazylibrarian/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lazylibrarian
  namespace: tortuga
spec:
  replicas: 1
  serviceName: lazylibrarian
  selector:
    matchLabels:
      app.kubernetes.io/name: lazylibrarian
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lazylibrarian
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-lazylibrarian/releases
        - image: ghcr.io/linuxserver/lazylibrarian:4c859042-ls361
          name: lazylibrarian
          ports:
            - containerPort: 5299
          volumeMounts:
            - mountPath: /config
              name: lazylibrarian-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: data-import-helper
          configMap:
            name: data-import-helper
        - name: import
          emptyDir: {}
        - name: lazylibrarian-config-pvc
          persistentVolumeClaim:
            claimName: lazylibrarian-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
