seedboxk8s/applications/lazylibrarian/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: lazylibrarian
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5299
