seedboxk8s/applications/lazylibrarian/IngressRoute.web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lazylibrarian-web
  namespace: tortuga
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - web # LazyLibrarian keeps generating http:// URLs, so we have to create a separate IngressRoute to redirect them to https.
  routes:
    - match: Host(`library.${productionClusterFqdn}`) || Host(`lazylibrarian.${productionClusterFqdn}`) || Host(`lazylib.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: lazylibrarian
          kind: Service
          port: 80
      middlewares:
        - name: redirect-to-https
          namespace: traefik
