seedboxk8s/applications/lazylibrarian/IngressRoute.websecure.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lazylibrarian-websecure
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: LazyLibrarian
    gethomepage.dev/group: Books
    gethomepage.dev/icon: lazylibrarian
    gethomepage.dev/href: https://library.${productionClusterFqdn}
    gethomepage.dev/pod-selector: app.kubernetes.io/name=lazylibrarian
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`library.${productionClusterFqdn}`) || Host(`lazylibrarian.${productionClusterFqdn}`) || Host(`lazylib.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: lazylibrarian
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
