seedboxk8s/applications/lazylibrarian/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lazylibrarian
  namespace: tortuga
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lazylibrarian.${clusterTld}`)
      kind: Rule
      services:
        - name: lazylibrarian
          kind: Service
          port: 80
      middlewares:
        - name: bridgetroll-mw
          namespace: bridgetroll
  tls:
    secretName: younix-dot-us-wildcard-backing-secret
